# SDIE

./: README.md  TESTING_GUIDE.md
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_evidence_and_synthesis.py  0003_problem_framing_and_industry.py  0004_workspace_engagements.py
backend/src/sdie/: config.py  main.py
backend/src/sdie/decision_analysis/application/: dto.py  ports.py  use_cases.py
backend/src/sdie/decision_analysis/domain/: entities.py  services.py
backend/src/sdie/decision_analysis/infrastructure/: orm.py  repository.py
backend/src/sdie/decision_analysis/interface/: router.py  schemas.py
backend/src/sdie/evidence_research/application/: dto.py  ports.py  use_cases.py
backend/src/sdie/evidence_research/domain/: entities.py  services.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_decision_analysis_repository.py  test_evidence_research_repository.py  test_financial_modeling_repository.py  test_problem_framing_repository.py  test_recommendation_synthesis_repository.py  test_workspace_repository.py
backend/tests/unit/decision_analysis/: test_services.py
backend/tests/unit/evidence_research/: test_services.py
backend/tests/unit/financial_modeling/: test_benchmarks.py  test_services.py
backend/tests/unit/problem_framing/: test_entities.py
backend/tests/unit/recommendation_synthesis/: test_entities.py  test_narrative.py  test_one_pager.py
backend/tests/unit/workspace/: test_entities.py
(+218 files in other folders)
